--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,30 @@
-theme: jekyll-theme-slate
+paginate: 10 # pagination based on number of posts
+paginate_path: "page:num"
+exclude: ["README.md"] # files to exclude
+highlighter: pygments
+markdown: redcarpet
+encoding: utf-8
+
+defaults:
+  -
+    scope:
+      path: "" # empty string for all files
+    values:
+      title: Have Fun.
+
+description: Kresnik的随想和技术空间
+author:
+  name: Gabrielfeng
+  email: gabrielwfeng@gmail.com
+  github: gabrielvon
+  twitter: gabriel
+  instagram: kresnikwang
+  linkedin: gabrielfeng
+  bio: Gabriel's Arema
+  # email_md5: 2baf659d886c56f600e3df8b4b9068f1
+
+rss_path: feed.xml
+categories_path: categories.html
+tags_path: tags.html
+
+BASE_PATH:
