--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Gabriel's Blog
 SEOTitle: Gabriel's Blog
 header-img: img/home-bg.jpg
 email:             gabrielwfeng@gmail.com
-description: "desc in config.ym"
+description: "Dreamer, Solver and Quant"
 keyword: "keyword"
 url: "https://gabrielwf.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
@@ -25,7 +25,7 @@ linkedin_username:   gabrielfeng
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
 permalink: pretty
-paginate: 10
+paginate: 3
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
@@ -33,7 +33,7 @@ anchorjs: true                          # if you want to customize anchor. check
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
-gems: [jekyll-paginate]
+gems: [jekyll-paginate, mathjax]
 
 
 
@@ -68,7 +68,7 @@ ga_domain: gabrielwf.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: ""
-sidebar-avatar: /img/avatar-gabriel.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar-gabriel.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -85,15 +85,12 @@ service-worker: true
 
 
 # Friends
-friend: [
+friends: [
     {
     #     title: "Su",
     #     href: "http://su.gallery/"
     # },{
         title: "Hana",
-        href: "hanaky.me"
-    }, {
-        title: "Hana",
-        href: "hanaky.me"
+        href: "http://hanaky.me"
     }
 ]
