--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,11 @@ anchorjs: true                          # if you want to customize anchor. check
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
-gems: [jekyll-paginate, mathjax]
+# gems: [jekyll-paginate]
 
+plugins:
+  - jekyll-feed
+  - jekyll-paginate
 
 
 # Markdown settings
