upload new post

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 title: Gabriel's Blog
 SEOTitle: Gabriel's Blog
+author: Gabriel
 header-img: img/home-bg.jpg
 email: gabrielwfeng@gmail.com
 description: "Dreamer, Solver and Quant"
