--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ friends: [
     #     title: "Su",
     #     href: "http://su.gallery/"
     # },{
-        title: "Hana",
-        href: "http://hanaky.me"
+    #    title: "Hana",
+    #    href: "http://hanaky.me"
     }
 ]
