--- a/_config.yml
+++ b/_config.yml
@@ -88,13 +88,13 @@ service-worker: true
 
 
 
-# Friends
-friends: [
-    {
-    #     title: "Su",
-    #     href: "http://su.gallery/"
-    # },{
-    #    title: "Hana",
-    #    href: "http://hanaky.me"
-    }
-]
+# # Friends
+# friends: [
+#     {
+#     #     title: "Su",
+#     #     href: "http://su.gallery/"
+#     # },{
+#     #    title: "Hana",
+#     #    href: "http://hanaky.me"
+#     }
+# ]
