--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ header-img: img/home-bg.jpg
 email: gabrielwfeng@gmail.com
 description: "Dreamer, Solver and Quant"
 keyword: "keyword"
-url: "https://gabrielwf.ml"              # your host, for absolute URL
+url: "https://gabrielwf.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
@@ -65,7 +65,7 @@ netease_comment: false
 
 # Google Analytics
 ga_track_id: 'UA-74828864-4'            # Format: UA-xxxxxx-xx
-ga_domain: gabrielwf.ml
+ga_domain: gabrielwf.me
 
 
 
